--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -4,37 +4,44 @@
   </div>
 
   <div id="rcorners">
-    <div style="color: #363636; font-weight: 600; padding: 2px;">Hợp đồng nguyên tắc mua bán vật liệu xây dựng</div>
-    <div style="color: #666666; font-size: 13px; padding: 2px;">Bên A: Công ty A</div>
-    <div style="color: #666666; font-size: 13px; padding: 2px;">Bên B: Nhà phân phối B, Nhà phân phối C</div>
-    <div style="display: flex;">
-      <div style="float: left; width: 70%;">
-        <div style="font-size: 13px; padding: 2px;">
+    <div class="row">
+      <div class="col-md-12" style="color: #363636; font-weight: 600;">Hợp đồng nguyên tắc mua bán vật liệu xây dựng</div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-12" style="color: #666666; font-size: 13px;">Bên A: Công ty A</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-12" style="color: #666666; font-size: 13px;">Bên B: Nhà phân phối B, Nhà phân phối C</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <div style="color: #666666; font-size: 13px;">Trạng thái: <span style="color: #018f25">Đang thực hiện</span></div>
+      </div>
+      <div class="col-md-5">
+        <div style="font-size: 13px;">
           <img src="../../../assets/img/calendar_blue.svg" width="12px"/><span style="padding-left: 3px; color: #106DB6">20/10/2021</span>
           <img src="../../../assets/img/calendar_red.svg" width="12px" style="padding-left: 50px;"/><span style="padding-left: 3px; color: #ED1C24">20/10/2021</span>
         </div>
-        <div style="color: #666666; font-size: 13px; padding: 2px;">Trạng thái: <span style="color: #018f25">Đang thực hiện</span></div>
       </div>
-      <div style="float: right;  width: 30%; display: flex;">
-        <div style="width: 110px; text-align: center;" (click)="open(mymodal)">
-          <div><img src="../../../assets/img/history_clock.svg" width="15px" /></div>
-          <div style="color: #666666; font-size: 13px;">Lịch sử</div>
-        </div>
-        <div style="width: 110px; text-align: center; padding-left: 10px;">
-          <div><img src="../../../assets/img/file.svg" width="15px" /></div>
-          <div style="color: #666666; font-size: 13px;">Tài liệu</div>
-        </div>
-        <div style="width: 120px; text-align: center; padding-left: 10px;">
-          <div><img src="../../../assets/img/file_multi.svg" width="15px" /></div>
-          <div style="color: #666666; font-size: 13px;">Sao chép</div>
-        </div>
-        <div style="width: 110px; text-align: center; padding-left: 10px;">
-          <div><img src="../../../assets/img/delete.svg" width="15px" /></div>
-          <div style="color: #666666; font-size: 13px;">Hủy bỏ</div>
-        </div>
+      <div class="col-md-1" style="text-align: center;">
+        <div><img src="../../../assets/img/history_clock.svg" width="15px" /></div>
+      </div>
+      <div class="col-md-1" style="text-align: center;">
+        <div><img src="../../../assets/img/file.svg" width="15px" /></div>
+      </div>
+      <div class="col-md-1" style="text-align: center;">
+        <div><img src="../../../assets/img/file_multi.svg" width="15px" /></div>
+      </div>
+      <div class="col-md-1" style="text-align: center;">
+        <div><img src="../../../assets/img/delete.svg" width="15px" /></div>
       </div>
     </div>
   </div>
+
 
   <div id="rcorners">
     <div style="color: #363636; font-weight: 600; padding: 2px;">Hợp đồng nguyên tắc mua bán vật liệu xây dựng</div>
