--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -1,12 +1,9 @@
-#rcorners {
+.item_contract {
   border: 1px solid #1487E1;
-  border-radius: 25px;
-  background: #FFFFFF;
-  background-position: left top;
-  background-repeat: repeat;
-  padding: 12px;
-  height: auto;
+  border-radius: 10px;
+  padding: 8px;
   margin-top: 10px;
+  line-height: 24px;
 }
 .pagination {
   display: inline-block;
@@ -30,20 +27,24 @@
 
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
-input[type=text] {
-  width: 100%;
-  box-sizing: border-box;
-  border: 1px solid #106DB6;
-  border-radius: 20px;
-  background-color: white;
-  background-image: url('../../../assets/img/search.svg');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  padding: 8px 20px 8px 40px;
-}
 
-input[type=text]:focus  {
-  outline: none !important;
-  border:1px solid 106DB6;
-  box-shadow: 0 0 10px #719ECE;
+.input-group-text{
+  padding: 8.5px;
 }
+// input[type=text] {
+//   width: 100%;
+//   box-sizing: border-box;
+//   border: 1px solid #106DB6;
+//   border-radius: 20px;
+//   background-color: white;
+//   background-image: url('../../../assets/img/search.svg');
+//   background-position: 10px 12px;
+//   background-repeat: no-repeat;
+//   padding: 8px 20px 8px 40px;
+// }
+
+// input[type=text]:focus  {
+//   outline: none !important;
+//   border:1px solid 106DB6;
+//   box-shadow: 0 0 10px #719ECE;
+// }
