--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -5,6 +5,26 @@
   margin-top: 10px;
   line-height: 24px;
 }
+
+.item_contract_name {
+  font-weight: 500;
+}
+
+.item_contract_infor{
+  color: #666666;
+}
+
+.status_blue{
+  color: #027e21;
+}
+
+.list_header{
+  color:#898989;
+  text-align: center;
+  padding: 12px 12px 0;
+  font-weight: 500;
+}
+
 .pagination {
   display: inline-block;
 }
@@ -31,20 +51,56 @@
 .input-group-text{
   padding: 8.5px;
 }
-// input[type=text] {
-//   width: 100%;
-//   box-sizing: border-box;
-//   border: 1px solid #106DB6;
-//   border-radius: 20px;
-//   background-color: white;
-//   background-image: url('../../../assets/img/search.svg');
-//   background-position: 10px 12px;
-//   background-repeat: no-repeat;
-//   padding: 8px 20px 8px 40px;
-// }
-
-// input[type=text]:focus  {
-//   outline: none !important;
-//   border:1px solid 106DB6;
-//   box-shadow: 0 0 10px #719ECE;
-// }
+.input-group-text i{
+  color: #106DB6;
+}
+.input-search{
+  height: 35px;
+  font-size: inherit;
+}
+.calendar_create{
+  text-align: center;
+  color:#106DB6
+}
+.calendar_deadline{
+  text-align: center;
+  color:red
+}
+.item_date{
+  padding-left: 3px;
+}
+.item_icon{
+  text-align: center;
+  color: #015393;
+}
+//popup
+.popup_content{
+  padding: 30px;
+}
+.popup_title{
+  margin: 0;
+  font-weight: 500;
+}
+.popup_close{
+  font-size: 25px;
+  text-align: right;
+  cursor: pointer;
+}
+.btn_close {
+  width: 90px;
+  font-size: inherit;
+  background: #6c6c6d;
+  color: white;
+  border: 1px solid #808183;
+}
+.btn_submit{
+  width: 90px;
+  font-size: inherit;
+  background: #106DB6;
+  color: white;
+  border: 1px solid #87CAFF;
+}
+.label_item{
+  padding: 10px 0px 5px;
+  color: #5e5e5e;
+}
