--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -6,14 +6,14 @@
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
-      <li [ngClass]="step>=1 ? 'active ' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==1}">Thông tin tài liệu</span></li>
-      <li [ngClass]="step>=2 ? 'active' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==2}">Xác định người ký</span></li>
-      <li [ngClass]="step>=3 ? 'active' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==3}">Thiết kế tài liệu</span></li>
-      <li [ngClass]="step==4 ? 'active' : 'inactive'"><span [ngClass]="{'current_active' : step==4}">Xác nhận và hoàn tất</span>
-      </li>
+      <li [ngClass]="this.stepHeader.step_1 ? 'active ' : 'inactive'"><span
+        [ngClass]="{'current_active' : this.stepHeader.step_1}">Thông tin tài liệu</span></li>
+      <li [ngClass]="this.stepHeader.step_2 ? 'active' : 'inactive'"><span
+        [ngClass]="{'current_active' : this.stepHeader.step_2}">Xác định người ký</span></li>
+      <li [ngClass]="this.stepHeader.step_3 ? 'active' : 'inactive'"><span
+        [ngClass]="{'current_active' : this.stepHeader.step_3}">Thiết kế tài liệu</span></li>
+      <li [ngClass]="this.stepHeader.step_4 ? 'active' : 'inactive'"><span
+        [ngClass]="{'current_active' : this.stepHeader.step_4}">Xác nhận và hoàn tất</span></li>
     </ul>
   </div>
 
