--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1,15 +1,26 @@
 <!-- form step 2 -->
 <div class="select-file-contract">
-  <div class="label">File hợp đồng: <span style="color: red">*</span></div>
-  <input id="file-input"
-         type="file"
-         accept=".pdf"
-         (change)="fileChanged($event)"
-         style="display: none;" />
-  <div class="select-contract" (click)="addFile()">
-    <input type="text" placeholder="Chọn file hợp đồng (PDF, DOC, DOCX)" readonly [ngModel]="this.datas.file_name">
-    <img src="assets/img/attachment.svg" alt="mobifone.contract">
+  <div class="file-approve">
+    <div class="label">File hợp đồng: <span style="color: red">*</span></div>
+    <input id="file-input"
+           type="file"
+           accept=".pdf"
+           (change)="fileChanged($event)"
+           style="display: none;" />
+    <div class="select-contract" (click)="addFile()">
+      <input type="text" placeholder="Chọn file hợp đồng (PDF, DOC, DOCX)" readonly [ngModel]="this.datas.file_name">
+      <img src="assets/img/attachment.svg" alt="mobifone.contract">
+    </div>
   </div>
+
+  <div class="file-attachment">
+    <div class="label">File đính kèm: <span style="color: red">*</span></div>
+    <div>
+      <span>Số file đính kèm: </span>
+      <img src="" alt="">
+    </div>
+  </div>
+
 </div>
 
 <!--<form [formGroup]="addressDetails" id="msform">-->
