--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -166,30 +166,35 @@
 
 .select-file-contract {
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
+  justify-content: space-between;
   margin-bottom: 22px;
-  .label {
-    font-size: 15px;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  .file-approve {
+    .label {
+      font-size: 15px;
+      font-family: Roboto, "Helvetica Neue", sans-serif;
+    }
+
+    .select-contract {
+      position: relative;
+      width: 425px;
+      input {
+        outline: none;
+        width: 400px;
+        height: 48px;
+        border-radius: 5px;
+        border: 1px solid #87CAFF;
+        padding-left: 10px;
+        cursor: pointer;
+      }
+      img {
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 35px;
+      }
+    }
   }
 
-  .select-contract {
-    position: relative;
-    width: 425px;
-    input {
-      outline: none;
-      width: 400px;
-      height: 48px;
-      border-radius: 5px;
-      border: 1px solid #87CAFF;
-      padding-left: 10px;
-      cursor: pointer;
-    }
-    img {
-      cursor: pointer;
-      position: absolute;
-      top: 15px;
-      right: 35px;
-    }
-  }
 }
