edit code show location toa do sign len menu step 3

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -23,8 +23,6 @@
         </div>
       </div>
       <!--      </div>-->
-
-
     </div>
     <hr>
 
@@ -51,11 +49,13 @@
         <div class="location">
           <div class="location-drag">
             <span class="label">X:</span>
-            <input id="input-location-x" type="text">
+<!--            <input type="text" (ngModelChange)="changePositionSign($event, 'x')" [ngModel]="objSignInfo.traf_x" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="true">-->
+            <input type="text" [ngModel]="location_sign_x" [readOnly]="true">
           </div>
           <div class="location-drag">
             <span class="label">Y:</span>
-            <input type="text">
+<!--            <input type="text" (ngModelChange)="changePositionSign($event, 'y')" [ngModel]="objSignInfo.traf_y" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [readOnly]="true">-->
+            <input type="text" [ngModel]="location_sign_y" [readOnly]="true">
           </div>
         </div>
       </div>
@@ -85,6 +85,7 @@
              [id]="d.id"
              style="z-index: -1"
              #itemElement
+             (click)="getSignSelect(d)"
              [ngClass]="changeColorDrag(null,true)"
              [ngStyle]="changePosition(d)">
           <div class="sig-img-daky" (click)="onCancel($event, d)">
