--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -73,6 +73,7 @@
       padding: 10px 20px;
       display: flex;
       align-items: center;
+      height: 59px;
 
       >a {
         text-transform: uppercase;
