--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -64,7 +64,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #368ee0;
+  border-bottom: 1px solid #e6e7ec;
   transition: left 500ms;
 }
 .search-wrapper {
