--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <perfect-scrollbar>
       <div class="sidebar-header">
         <a href="#">
-          <img src="assets/img/logo_eContract_21.svg" alt="Logo" class="img-responsive" width="100%" height="auto" />
+          <img src="assets/img/logo_eContract_21.svg" alt="Logo" class="img-responsive" width="185px" height="auto" />
         </a>
       </div>
 
