--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -49,7 +49,7 @@
 }
 
 .sidebar {
-  width: 260px;
+  width: 220px;
   height: 100%;
   max-height: 100%;
   position: fixed;
@@ -221,23 +221,24 @@
           }
 
           li {
-            padding-left: 25px;
-            font-size: 13px;
+            //padding-left: 25px;
+            // font-size: 13px;
+            list-style-type: none;
 
             a {
-              &:before {
-                content: "\f111";
-                font-family: 'FontAwesome';
-                font-weight: 400;
-                font-style: normal;
-                display: inline-block;
-                text-align: center;
-                text-decoration: none;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-                margin-right: 10px;
-                font-size: 8px;
-              }
+              // &:before {
+              //   content: "\f111";
+              //   font-family: 'FontAwesome';
+              //   font-weight: 400;
+              //   font-style: normal;
+              //   display: inline-block;
+              //   text-align: center;
+              //   text-decoration: none;
+              //   -webkit-font-smoothing: antialiased;
+              //   -moz-osx-font-smoothing: grayscale;
+              //   margin-right: 10px;
+              //   font-size: 8px;
+              // }
 
               .badge,
               .label {
@@ -426,7 +427,7 @@ $bg-scrollbar :#636363;
 
 // colors with backgound image
 $img-bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
-$img-border-color : #8d8b8b26;
+$img-border-color : #b4b2b226;
 $img-bg-footer :rgba(43, 43, 43, 0.5);
 $img-shadow-color:rgba(0, 0, 0, 0.5);
 
@@ -463,19 +464,19 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   .sidebar-menu .active>a,
   .sidebar-menu .sidebar-dropdown.active>a,
   .sidebar-profile .user-info,
-  .sidebar-header>a:hover,
   .sidebar-footer>div>a:hover i,
   #close-sidebar:hover {
-    color: $hover-color !important;
+    //color: $hover-color !important;
     background-color: #c5ebff;
+    font-weight: 500;
   }
 
-  ul li:hover a i,
-  .sidebar-dropdown .sidebar-submenu li a:hover:before,
-  .sidebar-search input.search-menu:focus+span,
-  .sidebar-menu .sidebar-dropdown.active a i {
-    color: $hover-color;
-  }
+  // ul li:hover a i,
+  // .sidebar-dropdown .sidebar-submenu li a:hover:before,
+  // .sidebar-search input.search-menu:focus+span,
+  // .sidebar-menu .sidebar-dropdown.active a i {
+  //   color: $hover-color;
+  // }
 
   .sidebar-menu ul li a i,
   .sidebar-menu .sidebar-dropdown div,
@@ -507,7 +508,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   // styles with background image
   &.sidebar-bg {
 
-    background-image: url(/assets/img/bg1.jpg);
+    //background-image: url(/assets/img/bg1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -557,4 +558,24 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   color: #106DB6;
   border-radius: .65rem;
   background: #aae124;
+}
+
+.btn_add_contract{
+  border: 0px;
+  border-radius: 12px;
+  width: 150px;
+  height: 33px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #106DB6;
+  font-size: 13px;
+}
+.sub_title{
+  padding-left: 35px;
+}
+.sub_title_add{
+  padding-left: 25px;
+}
+.icon_add{
+  padding-right: 5px;
 }
