--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -114,4 +114,37 @@
   .ngx-pagination {
     padding: 0;
   }
+  .ngx-pagination a, .ngx-pagination button {
+    text-decoration: none;
+    background: #f3f3f3;
+  }
+  .ngx-pagination li {
+    width: 50px;
+    border-radius: 5px;
+  }
+  .ngx-pagination .pagination-previous a::before,
+  .ngx-pagination .pagination-previous.disabled::before {
+    font-family: 'Material Icons';
+    content: 'keyboard_arrow_left';
+    vertical-align: middle;
+    display: inline;
+    margin: 0;
+  }
+  .ngx-pagination .pagination-next a::after,
+  .ngx-pagination .pagination-next.disabled::after {
+    font-family: 'Material Icons';
+    content: 'keyboard_arrow_right';
+    vertical-align: middle;
+    display: inline;
+    margin: 0;
+  }
+
+  .nav-link.active {
+    color: #0d6efd;
+    font-weight: 500;
+    background-color: #c5ebff;
+  }
+  .nav-link {
+    color: #6c6c6d;
+  }
 }
